# Dnealar

./: CMakeLists.txt  Readme.md
demo/: CMakeLists.txt
demo/src/: main.c
include/dnealar/: dnealar.h  primitives.h  texture.h  widgets.h
src/: compoundShader.c  compoundShader.h  context.h  dnealar.c  internal.c  internal.h  primitives.c  renderer.c  renderer.h  texture.c  texture.h  widgets.c
